refactor(core): optimize Browser, Page, PageElement and TestContext
- Optimize Browser with improved wait strategies
- Simplify Page and HostPage element handling
- Improve PageElement with better locator management
- Optimize TestContext for thread-safety
- Refactor BaseProcess and ZahoriProcess
- Use parameterized logging (garbage-free)